<resources>
    <string name="app_name">Flow</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bt_new">New</string>
    <string name="btn_icon">button_home</string>
    <string name="btn_view">View</string>
    <string name="home">home</string>
    <string name="search">Find Route</string>
    <string name="your_route_details">Your Route Details</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="tags">Tags</string>
    <string name="rate">Rate</string>
    <string name="eaton_center">Eaton Center</string>
    <string name="george_brown_college">George Brown College</string>
    <string name="ttc_to_school">TTC to School</string>
    <string name="_8pm_10_10_2019">8pm - 10/10/2019</string>
    <string name="easy_time_consuming">Easy - Time Consuming</string>
    <string name="delete">Delete</string>
    <string name="pending">pending</string>
    <string name="viewrouteinfofragment">ViewRouteInfoFragment</string>
    <string name="flow">Flow</string>
    <string name="about_us">ABOUT US</string>
    <string name="contact">CONTACT</string>
    <string name="developer">Developer:</string>
    <string name="nga_le">Nga Le - 101110291</string>
    <string name="version">Version 1.0</string>
    <string name="todo">TODO</string>
    <string name="time_list">Time :      8am - 10/10/2019</string>
    <string name="rate_list">Rate :</string>
    <string name="tags_list">Tags :      Easy, Time - consuming</string>
    <string name="edit">Edit</string>
    <string name="pause">Pause</string>
    <string name="finish">Finish</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid coordinates used</string>
    <string name="start_tracking_location">Start tracking</string>
    <string name="no_location">No location available</string>
    <string name="no_address_found">No address found</string>
    <string name="stop_tracking_location">Stop tracking</string>
    <string name="textview_hint">Press New to start tracking your
        location.
    </string>
    <string name="location_permission_denied">Location permissions denied,
        please enable the permissions to use this app.
    </string>
    <string name="loading">Loading…</string>
    <string name="address_text">"Address: %1$s \n Timestamp: %2$tr"</string>
    <string name="back">Back</string>
    <string name="unable_to_update">Unable to update the route</string>
    <string name="able_to_update">Update success</string>
</resources>
