<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".AboutUs">

<!--    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--        xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--        xmlns:tools="http://schemas.android.com/tools"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:background="@drawable/gradient_background"-->
<!--        android:orientation="vertical">-->

    <TextView
        android:id="@+id/txtFlow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/flow"
        android:textColor="@android:color/white"
        android:textSize="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/about_us"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFlow" />

    <TextView
        android:id="@+id/txtContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginLeft="132dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/contact"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAbout" />

    <TextView
        android:id="@+id/txtDev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="17dp"
        android:fontFamily="@font/montserrat"
        android:gravity="bottom"
        android:text="@string/developer"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtNga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtNga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/montserrat"
        android:gravity="bottom"
        android:text="@string/nga_le"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtVer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/montserrat"
        android:gravity="bottom"
        android:text="@string/version"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="43dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>