<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tracking">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:mapType="normal"
        app:uiCompass="false"
        app:uiRotateGestures="true"
        app:uiScrollGestures="true"
        app:uiTiltGestures="true"
        app:uiZoomControls="true"
        app:uiZoomGestures="true"
        tools:context=".MapsActivity"
        tools:layout="@layout/activity_maps" />

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="129dp"
        android:layout_marginLeft="129dp"
        android:layout_marginBottom="308dp"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageButton
        android:id="@+id/btnHome"
        android:layout_width="58dp"
        android:layout_height="47dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/home"
        android:src="@android:drawable/ic_menu_info_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="384dp"
        android:layout_height="203dp"
        android:background="#B3F19E82"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.831">


        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="196dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:numStars="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.813"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblRate"
            android:layout_width="59dp"
            android:layout_height="23dp"
            android:layout_marginTop="32dp"
            android:text="@string/rate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.082"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/title"
            app:layout_constraintEnd_toStartOf="@+id/txtTitle"
            app:layout_constraintHorizontal_bias="0.297"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblRate" />

        <TextView
            android:id="@+id/lblTags"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/tags"
            app:layout_constraintEnd_toStartOf="@+id/txtTags"
            app:layout_constraintHorizontal_bias="0.297"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblTitle" />

        <EditText
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:ems="10"
            android:hint="@string/ttc_to_school"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.893"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtTags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/easy_time_consuming"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.893"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>