<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewDetails">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:mapType="normal"
        app:uiCompass="false"
        app:uiRotateGestures="true"
        app:uiScrollGestures="true"
        app:uiTiltGestures="true"
        app:uiZoomControls="true"
        app:uiZoomGestures="true"
        tools:context=".MapsActivity" />

    <ImageButton
        android:id="@+id/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/home"
        android:src="@android:drawable/ic_menu_info_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="16dp"
        android:text="@string/your_route_details"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="368dp"
        android:layout_height="467dp"
        android:background="#B3F19E82"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345">


        <TextView
            android:id="@+id/lblStart"
            android:layout_width="50dp"
            android:layout_height="21dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="36dp"
            android:text="@string/start"
            android:textColorHint="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblEnd"
            android:layout_width="50dp"
            android:layout_height="23dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="60dp"
            android:text="@string/end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblStart" />

        <TextView
            android:id="@+id/lblRate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="48dp"
            android:text="@string/rate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblTags" />

        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="60dp"
            android:text="@string/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblEnd" />

        <TextView
            android:id="@+id/lblTime"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="60dp"
            android:text="@string/time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblTitle" />

        <TextView
            android:id="@+id/lblTags"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="60dp"
            android:text="@string/tags"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblTime" />

        <EditText
            android:id="@+id/txtStart"
            android:layout_width="212dp"
            android:layout_height="44dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="Start Point"
            android:importantForAutofill="no"
            android:inputType="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.537"
            app:layout_constraintStart_toEndOf="@+id/lblStart"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtEnd"
            android:layout_width="210dp"
            android:layout_height="41dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="End Point"
            android:importantForAutofill="no"
            android:inputType="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.549"
            app:layout_constraintStart_toEndOf="@+id/lblEnd"
            app:layout_constraintTop_toBottomOf="@+id/txtStart" />

        <EditText
            android:id="@+id/txtTitle"
            android:layout_width="214dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="Title"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.549"
            app:layout_constraintStart_toEndOf="@+id/lblTitle"
            app:layout_constraintTop_toBottomOf="@+id/txtEnd" />

        <EditText
            android:id="@+id/txtTime"
            android:layout_width="217dp"
            android:layout_height="42dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.549"
            app:layout_constraintStart_toEndOf="@+id/lblTime"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

        <EditText
            android:id="@+id/txtTags"
            android:layout_width="212dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="Tags"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.549"
            app:layout_constraintStart_toEndOf="@+id/lblTags"
            app:layout_constraintTop_toBottomOf="@+id/txtTime" />

        <RatingBar
            android:id="@+id/ratingBarUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:numStars="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.524"
            app:layout_constraintStart_toEndOf="@+id/lblRate"
            app:layout_constraintTop_toBottomOf="@+id/txtTags" />

    </androidx.constraintlayout.widget.ConstraintLayout><![CDATA[



    _content"
    android:layout_height="wrap_content"
    android:layout_marginTop="36dp"
    android:text="@string/save"
    app:layout_constraintEnd_toStartOf="@+id/btnDelete"
    app:layout_constraintHorizontal_bias="0.416"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />



    ]]>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="36dp"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="36dp"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.745"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />



</androidx.constraintlayout.widget.ConstraintLayout>