<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view_list">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:mapType="normal"
        app:uiCompass="false"
        app:uiRotateGestures="true"
        app:uiScrollGestures="true"
        app:uiTiltGestures="true"
        app:uiZoomControls="true"
        app:uiZoomGestures="true"
        tools:context=".MapsActivity" />

    <ListView
        android:id="@+id/list_route"
        android:layout_width="274dp"
        android:layout_height="406dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="219dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/map"
        app:layout_constraintVertical_bias="0.606" />

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="89dp"
        android:layout_marginBottom="645dp"
        android:ems="10"
        android:hint="@string/search"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintStart_toStartOf="@+id/list_route"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <Button
        android:id="@+id/btn_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="616dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:text="@string/bt_new"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/map" />

    <ImageButton
        android:id="@+id/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/home"
        android:src="@android:drawable/ic_menu_info_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <ImageButton-->
<!--        android:id="@+id/ibtn_about_us"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:contentDescription="@string/home"-->
<!--        android:src="@android:drawable/ic_menu_agenda"-->
<!--        app:layout_constraintStart_toStartOf="@+id/map"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        tools:src="@android:drawable/ic_menu_info_details" />-->

</androidx.constraintlayout.widget.ConstraintLayout>