<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:mapType="normal"
        app:uiCompass="false"
        app:uiRotateGestures="true"
        app:uiScrollGestures="true"
        app:uiTiltGestures="true"
        app:uiZoomControls="true"
        app:uiZoomGestures="true"
        tools:context=".MapsActivity" />

    <Button
        android:id="@+id/btn_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="124dp"
        android:text="@string/btn_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="@+id/map" />

    <Button
        android:id="@+id/btn_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="129dp"
        android:layout_marginLeft="129dp"
        android:layout_marginBottom="124dp"
        android:text="@string/bt_new"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.682"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/home"
        android:src="@android:drawable/ic_menu_info_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--    <ImageButton-->
<!--        android:id="@+id/ibtn_about_us"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:contentDescription="@string/home"-->
<!--        android:src="@android:drawable/ic_menu_agenda"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/map"-->
<!--        tools:src="@android:drawable/ic_menu_info_details" />-->


</androidx.constraintlayout.widget.ConstraintLayout>


<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:layout_gravity="start">-->

<!--    <fragment-->
<!--        xmlns:map="http://schemas.android.com/apk/res-auto"-->
<!--        android:id="@+id/map"-->
<!--        android:name="com.google.android.gms.maps.SupportMapFragment"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        map:mapType="normal"-->
<!--        map:uiCompass="false"-->
<!--        map:uiRotateGestures="true"-->
<!--        map:uiScrollGestures="false"-->
<!--        map:uiTiltGestures="true"-->
<!--        map:uiZoomControls="false"-->
<!--        map:uiZoomGestures="true"-->
<!--        tools:context=".MapsActivity" />-->

<!--    <Button-->
<!--        android:id="@+id/btn_view"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="bottom"-->
<!--        android:layout_marginLeft="220dp"-->
<!--        android:layout_marginBottom="100dp"-->
<!--        android:text="@string/btn_view"-->
<!--        android:layout_marginStart="250dp" />-->

<!--    <Button-->
<!--        android:id="@+id/btn_new"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="bottom"-->
<!--        android:layout_marginLeft="80dp"-->
<!--        android:layout_marginBottom="100dp"-->
<!--        android:text="@string/bt_new"-->
<!--        android:layout_marginStart="80dp" />-->

<!--    <ImageButton-->
<!--        android:id="@+id/ibtn_about_us"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:layout_marginLeft="10dp"-->
<!--        android:contentDescription="@string/home"-->
<!--        android:src="@android:drawable/ic_menu_agenda"-->
<!--        tools:src="@android:drawable/ic_menu_info_details" />-->

<!--</FrameLayout>-->


<!--    xmlns:map="http://schemas.android.com/apk/res-auto"-->


<!--    android:layout_gravity="left|bottom"-->